--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
 
     <script>
         // ==========================================================
-        // CONFIGURAÇÃO DO MAKE (LINK JÁ INSERIDO!)
+        // CONFIGURAÇÃO DO MAKE (LINK NOVO INSERIDO!)
         // ==========================================================
-        const MAKE_WEBHOOK_URL = "https://hook.us2.make.com/rmycf4cbux6g6u4kyhwqkxivimmr3c6k"; 
+        const MAKE_WEBHOOK_URL = "https://hook.us2.make.com/ubtgsor55ni8hp3aq5wy5qj5jyyaoihz"; 
         // ==========================================================
 
         // --- MÁSCARAS ---
@@ -301,7 +301,7 @@
 
             const formData = new FormData();
             formData.append('file', selectedFile);
-            // Enviamos também o nome e CPF para você usar no Make se quiser renomear o arquivo
+            // Dados para você usar no Make (Renomear arquivo ou criar pastas)
             formData.append('name', currentUser.name);
             formData.append('cpf', currentUser.cpf);
 
